Thu Feb 26 13:23:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (cdhash_each): resurrects internal literals.

Thu Feb 26 10:56:48 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h (rb_w32_wopen): prototype forgotten.

	* io.c (rb_sysopen_internal): shouldn't replace undefined chars in this
	  case.

Thu Feb 26 01:34:38 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: more MSG_* constants.

Thu Feb 26 00:21:21 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (sockopt_level): extracted from sockopt_level_m.
	  (sockopt_optname): extracted from sockopt_optname_m.
	  (sockopt_data): apply StringValue.
	  (sockopt_s_linger): new method.
	  (sockopt_linger): new method.
	  (inspect_linger): show onoff value if it is neither 0 nor 1.

Wed Feb 25 23:23:03 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_unix_rights): raise
	  NotImplementedError if no fd passing feature.
	  (ancillary_timestamp): raise NotImplementedError if no timestamp
	  feature.
	  
Wed Feb 25 23:18:53 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_s_unix_rights): new method.

Wed Feb 25 23:01:26 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/unixsocket.c (unix_recv_io): prevent FD leak when 2 fd is
	  sent on LP64 platform.

	* ext/socket/rubysocket.h (rsock_discard_cmsg_resource): declared.

	* ext/socket/ancdata.c (rsock_discard_cmsg_resource): renamed from
	  discard_cmsg_resource.  export it.

Wed Feb 25 17:31:32 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (sysopen_func, rb_sysopen_internal, rb_sysopen): open file
	  by UTF-16'ed filename on Windows.

	* io.c (rb_file_open_generic, rb_io_s_sysopen, rb_io_reopen,
	  argf_next_argv): follow above change.

	* io.c (rb_scan_open_args): no longer need to convert filepath here on
	  Windows.

	* win32/wio32.c (rb_w32_wopen): new function to open file by UTF-16'ed
	  filename.

	* win32/win32.c (rb_w32_open): call rb_w32_open().
