@@ -1,3 +1,8 @@
+Thu Feb 26 13:30:34 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* util.c (valid_filename): use our own implementation of open(),
+	  close() and unlink().
+
 Thu Feb 26 13:23:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* iseq.c (cdhash_each): resurrects internal literals.
